Fix: text contrast

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,8 +23,8 @@ body {
 }
 .logo-center h1 {
     font-size: 64px;
-    color: #FF812C;
-    text-shadow: -1px 0 #002673, 0 2px #002673, 2px 0 #002673, 0 -1px #002673;
+    color: #003d57;
+    
 }
 #info {
     width: 50%;
@@ -36,8 +36,7 @@ body {
 }
 .popup p {
     font-size: 32px;
-    color: #FF812C;
-    text-shadow: -1px 0 #002673, 0 1px #002673, 1px 0 #002673, 0 -1px #002673;
+    color: #003d57;
 }
 /*--------- Play Button----------*/
 .welcome {
@@ -48,8 +47,7 @@ body {
     box-shadow: rgba(0, 0, 0, 0.7) 0px 10px 30px;
     font-size: 64px;
     background-color:#FF812C ;
-    color: #FFFFFE;
-    text-shadow: -1px 0 #002673, 0 2px #002673, 2px 0 #002673, 0 -1px #002673;
+    color: #003d57;
     text-decoration: none;
     padding: 5px;
 }
@@ -69,8 +67,7 @@ body {
     width: 50%;
     text-align: center;
     font-size: 32px;
-    color: #FF812C;
-    text-shadow: -1px 0 #002673, 0 1px #002673, 1px 0 #002673, 0 -1px #002673;
+    color: #003d57;
 }
 .stats-info-right p {
     margin: auto;
@@ -99,6 +96,12 @@ body {
     display: grid;
     text-align: center;
 }
+.upgrades h2 {
+    color: #002673;
+}
+.help h2 {
+    color: #002673;
+}
 .object {
     display: flex;
 }
@@ -114,8 +117,7 @@ body {
 }
 .details p {
     font-size: 22px;
-    color: #FF812C;
-    text-shadow: -1px 0 #002673, 0 1px #002673, 1px 0 #002673, 0 -1px #002673;
+    color: #003d57;
 }
 .button {
     width: 30%;
@@ -128,8 +130,8 @@ body {
     box-shadow: rgba(0, 0, 0, 0.7) 0px 10px 30px;
     font-size: 34px;
     background-color:#FF812C ;
-    color: #FFFFFE;
-    text-shadow: -1px 0 #002673, 0 2px #002673, 2px 0 #002673, 0 -1px #002673;
+    color: #003d57;
+    padding: 25px;
 }
 .buyButton:active {
     box-shadow: 0 5px rgba(0, 0, 0, 0.7) 0px 10px 30px;
@@ -152,10 +154,9 @@ body {
     display: flex;
     justify-content: space-around;
 }
-.personal {
-    font-size: 24px;
-    color: #FF812C;
-    text-shadow: -1px 0 #002673, 0 1px #002673, 1px 0 #002673, 0 -1px #002673;
+.personal p {
+    font-size: 20px;
+    color: #003d57;
 }
 
 /*---------- All media ----------*/
